--- a/msme-ai-system/vercel.json
+++ b/msme-ai-system/vercel.json
@@ -4,8 +4,5 @@
   "buildCommand": "npm run build",
   "devCommand": "npm run dev",
   "installCommand": "npm install",
-  "regions": ["bom1"],
-  "env": {
-    "NEXT_PUBLIC_API_URL": "@backend_api_url"
-  }
+  "regions": ["bom1"]
 }
