--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,5 @@
 services:
+  # Backend API Service
   - type: web
     name: msme-ai-backend
     env: python
@@ -14,3 +15,17 @@ services:
         sync: false
       - key: PYTHON_VERSION
         value: 3.11.0
+
+  # Frontend Next.js Service
+  - type: web
+    name: msme-ai-frontend
+    env: node
+    region: singapore
+    rootDir: msme-ai-system
+    buildCommand: npm install -g pnpm && pnpm install && pnpm run build
+    startCommand: pnpm start
+    envVars:
+      - key: NODE_VERSION
+        value: 20.11.0
+      - key: NEXT_PUBLIC_API_URL
+        value: https://decision-centric-ai-for-msme-operations.onrender.com
